--- a/lang/parser.cabal
+++ b/lang/parser.cabal
@@ -6,18 +6,16 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:    Parser.Parser,
-                      Parser.Lexer
+  exposed-modules:    
+                      Parser.Lexer,
+                      Parser.AST,
+                      Parser.Parser
  
   build-depends:       base >=4.7,
-                       parsec == 3.1.8,
-                       lens,
-                       parsers,
                        trifecta,
-                       mtl,
-                       data-default,
-                       parsec-numbers,
-                       indents == 0.3.3
+                       parsers,
+                       transformers,
+                       pretty-show
 
   hs-source-dirs:   src
   default-language:    Haskell2010
