--- a/lang/parser.cabal
+++ b/lang/parser.cabal
@@ -11,7 +11,7 @@ library
                       Parser.AST,
                       Parser.Parser
  
-  build-depends:       base >=4.7,
+  build-depends:       base,
                        trifecta,
                        parsers,
                        transformers,
