WIP. Started using lens, sorry Tomek :(

--- a/lang/parser.cabal
+++ b/lang/parser.cabal
@@ -7,11 +7,14 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:  CodeGen.ASM
+                  , CodeGen.Generator
                   , Parser.Lexer
                   , Parser.AST
                   , Parser.Parser
  
   build-depends:    base
+                  , mtl
+                  , lens
                   , parsec
                   , pretty-show
 
