--- a/lang/parser.cabal
+++ b/lang/parser.cabal
@@ -7,16 +7,19 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:  CodeGen.ASM
+                  , CodeGen.ASM2
                   , CodeGen.Generator
                   , Parser.Lexer
                   , Parser.AST
                   , Parser.Parser
- 
+
   build-depends:    base
+                  , containers
                   , mtl
                   , lens
                   , parsec
                   , pretty-show
+                  , transformers
 
   hs-source-dirs:   src
   default-language: Haskell2010
