--- a/lang/parser.cabal
+++ b/lang/parser.cabal
@@ -12,6 +12,7 @@ library
                   , Parser.Lexer
                   , Parser.AST
                   , Parser.Parser
+                  , Main
 
   build-depends:    base
                   , containers
@@ -20,6 +21,7 @@ library
                   , parsec
                   , pretty-show
                   , transformers
+                  , transformers-compat
 
   hs-source-dirs:   src
   default-language: Haskell2010
