--- a/lang/parser.cabal
+++ b/lang/parser.cabal
@@ -10,6 +10,7 @@ library
                   , CodeGen.ASM2
                   , CodeGen.Generator
                   , CodeGen.LabelRename
+                  , CodeGen.Typechecker
                   , Parser.Lexer
                   , Parser.AST
                   , Parser.Parser
@@ -17,6 +18,8 @@ library
 
   build-depends:    base
                   , containers
+                  , data-default
+                  , either
                   , mtl
                   , lens
                   , parsec
@@ -26,4 +29,3 @@ library
 
   hs-source-dirs:   src
   default-language: Haskell2010
-
