--- a/lang/parser.cabal
+++ b/lang/parser.cabal
@@ -30,3 +30,21 @@ library
 
   hs-source-dirs:   src
   default-language: Haskell2010
+
+Executable compiler
+    Hs-Source-Dirs: src
+    Main-Is:        Main.hs
+
+    GHC-Options:    -Wall -O2 -threaded
+
+
+  build-depends:    base
+                  , containers
+                  , data-default
+                  , either
+                  , mtl
+                  , lens
+                  , parsec
+                  , pretty-show
+                  , transformers
+                  , transformers-compat
