Binarization. Works. I hope documentation will be pushed tomorrow.

--- a/lang/parser.cabal
+++ b/lang/parser.cabal
@@ -8,6 +8,7 @@ cabal-version:       >=1.10
 library
   exposed-modules:  CodeGen.ASM
                   , CodeGen.ASM2
+                  , CodeGen.Binary
                   , CodeGen.Generator
                   , CodeGen.LabelRename
                   , CodeGen.Typechecker
@@ -18,6 +19,8 @@ library
                   , Main
 
   build-depends:    base
+                  , binary
+                  , bytestring
                   , containers
                   , data-default
                   , either
@@ -39,6 +42,8 @@ Executable compiler
 
 
   build-depends:    base
+                  , binary
+                  , bytestring
                   , containers
                   , data-default
                   , either
