--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,31 @@ cabal.sandbox.config
 .virtualenv
 .hsenv
 
+#latex
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
+
 
 # ignore Quartus II generated files
 *sopc_*
